some more findbug fixes